src/test/resources/invalid/InvalidExtension.foo
/* (c) https://github.com/MontiCore/monticore */

statechart InvalidExtension {
  initial state A;
}